adding file parser functionalities

--- a/samples/index.html
+++ b/samples/index.html
@@ -7,12 +7,9 @@
 </head>
 <body>
 
-<p id="p_data"></p>
+<input type="text" id="url" value="/samples/test1.csv"></input>
+<button type="button" id="cli" >Click me</button>
 
-  <script src="../lib/index.js"></script>
-  <script>
-      console.log(readTextFile('data.txt'));
-  </script>
-  
+  <script src="../dist/drawit.js"></script>
 </body>
 </html>
