--- a/samples/index.html
+++ b/samples/index.html
@@ -4,12 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>DrawIt amples</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.1/c3.min.css" rel="stylesheet"></link>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.6.1/c3.min.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src="../dist/drawit.js"></script>
 </head>
 <body>
 
 <input type="text" id="url" value="/samples/test1.csv"></input>
-<button type="button" id="cli" >Click me</button>
-
-  <script src="../dist/drawit.js"></script>
+<button type="button" id="cli" onclick="drawSVG()" >Click me</button>
+<div id="ch"></div>
+<script>
+ 
+function drawSVG(){
+  DI.generate(document.getElementById("url").value,'ch', c3.generate, {x:'fruit', y:'count'} );
+}
+</script>
 </body>
 </html>
